# CRKT

./: .gitignore  COMMIT_MESSAGE.txt  CRKT.spec  README.md  api_settings_dialog.py  cache.py  get_selected_text.py  icon.spec  index.html  listener.py  main.py  owindowed.spec  package-lock.json  package.json  prompt.txt  selected_text.py  settings.html  settings_dialog.py  show.py  skill_manager.py  translator.py  vite.config.ts  更新说明.md
api/: __init__.py  openai_api.py
core/: __init__.py  listener.py  types.py
editormd/css/: editormd.css
models/: __init__.py  cache_manager.py  config_manager.py  history_manager.py  language_detector.py
old_version/: main.py  requirements.txt
old_version/core/: logger.py
old_version/models/: translation_service.py
old_version/presenters/: __init__.py
old_version/utils/: __init__.py  selected_text.py
old_version/views/: __init__.py  display_window.py  tray_icon.py
presenters/: app_presenter.py
scripts/: macos-sign.sh
src/: App.vue  SettingsApp.vue  settings.ts  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-icon.rgba
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: cache.rs  config.rs  history.rs  mod.rs  translation.rs
src-tauri/src/platform/: double_tap.rs  mod.rs  text_capture.rs  tray.rs  window.rs
src-tauri/src/services/: cache.rs  config.rs  history.rs  language.rs  migration.rs  mod.rs  translator.rs
src/components/: HistoryToolbar.vue  (+3 more)
views/: display_window.py  settings_dialog.py
(+11 files in other folders)
